Bug 411532 - Whenever I try to open a previous file, Krita freezes and is "Not Responding." I have plenty of storage and memory on my computer and the program worked beautifully for 3 days until I can no longer access my work. I have also updated everything possible.
Summary: Whenever I try to open a previous file, Krita freezes and is "Not Responding....
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-02 17:27 UTC by lindsayrichardson11
Modified: 2025-10-02 09:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-22841-0.html (3.32 KB, text/html)
2019-09-03 12:25 UTC, lindsayrichardson11
Details
attachment-27324-0.html (994 bytes, text/html)
2019-09-03 16:23 UTC, lindsayrichardson11
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lindsayrichardson11 2019-09-02 17:27:13 UTC
SUMMARY


STEPS TO REPRODUCE
1. I try to open previous work from 3 days ago
2. Krita freezes indefinitely and says it is "not responding"
3. I installed the latest version of Krita, updated all software and drivers, ensured there is enough memory space, etc. 

OBSERVED RESULT
After 3 days of trying to open my work and reading Krita message boards, I still cannot access my work. 

EXPECTED RESULT
Being able to access my work. I am a professional illustrator. 

SOFTWARE/OS VERSIONS
Windows: Windows 10, version 1903
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-09-03 07:40:48 UTC
Could you please attach or make available the file in question so we can investigate what's up with it?
Comment 2 lindsayrichardson11 2019-09-03 12:25:57 UTC
Created attachment 122467 [details]
attachment-22841-0.html

Yes, no problem. Here are the two files. I had to send as a Google drive
link because of their size, so please let me know if you have an issue
opening them.
 New Panda 02.kra
<https://drive.google.com/file/d/1sZCSsPaSUeKPqxBU7yMN0Sna3F5eyg2a/view?usp=drive_web>


Thank you!
Lindsay
 New Panda 01.kra
<https://drive.google.com/file/d/1WxsY0iNwBZDjDylok6yxDsc927ag0i3Y/view?usp=drive_web>

On Tue, Sep 3, 2019 at 2:40 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=411532
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |boud@valdyas.org
>              Status|REPORTED                    |NEEDSINFO
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from Boudewijn Rempt <boud@valdyas.org> ---
> Could you please attach or make available the file in question so we can
> investigate what's up with it?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Halla Rempt 2019-09-03 12:57:19 UTC
Thanks! Downloading the files now.
Comment 4 Halla Rempt 2019-09-03 13:07:41 UTC
Okay... The files load here. It takes a long time because the number of layers is astonishingly high: 3365 -- that's really more than I've ever seen before! Once loaded the image takes 2.5 GiB of memory, so that's not that outrageous.

The files also say that they were saved with Krita 4.0.3 -- is that correct? If so, that's a really, really old version of Krita, we're currently at 4.2.5.
Comment 5 Halla Rempt 2019-09-03 15:30:38 UTC
Git commit 87e056ebf0089a3ef990de7e452beac4877f29d0 by Boudewijn Rempt.
Committed on 03/09/2019 at 15:28.
Pushed by rempt into branch 'master'.

Cache the profiles when loading layers

When loading an image with a reasonable amount of layers, loading
and creating the profile for each layer isn't really noticable, but
if there are thousands and thousands of layers, it's a major drag
on loading kra files.

And it's very likely that every layer has the same profile _anyway_.

This makes loading the sample files from https://bugs.kde.org/show_bug.cgi?id=411532
mucht faster.

M  +21   -7    plugins/impex/libkra/kis_kra_load_visitor.cpp
M  +2    -0    plugins/impex/libkra/kis_kra_load_visitor.h

https://invent.kde.org/kde/krita/commit/87e056ebf0089a3ef990de7e452beac4877f29d0
Comment 6 Halla Rempt 2019-09-03 15:31:26 UTC
This fix will be in tomorrow's nightly build: https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/
Comment 7 lindsayrichardson11 2019-09-03 16:23:50 UTC
Created attachment 122470 [details]
attachment-27324-0.html

Thank you for your help, much appreciated!

On Tue, Sep 3, 2019 at 10:31 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=411532
>
> --- Comment #6 from Boudewijn Rempt <boud@valdyas.org> ---
> This fix will be in tomorrow's nightly build:
> https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 8 Halla Rempt 2019-09-10 08:27:58 UTC
Git commit 882ef7d97b2d741924e3498dd44a4afee8d72226 by Boudewijn Rempt.
Committed on 10/09/2019 at 08:25.
Pushed by rempt into branch 'krita/4.2'.

Cache the profiles when loading layers

When loading an image with a reasonable amount of layers, loading
and creating the profile for each layer isn't really noticable, but
if there are thousands and thousands of layers, it's a major drag
on loading kra files.

And it's very likely that every layer has the same profile _anyway_.

This makes loading the sample files from https://bugs.kde.org/show_bug.cgi?id=411532
mucht faster.

M  +21   -7    plugins/impex/libkra/kis_kra_load_visitor.cpp
M  +2    -0    plugins/impex/libkra/kis_kra_load_visitor.h

https://invent.kde.org/kde/krita/commit/882ef7d97b2d741924e3498dd44a4afee8d72226