plugins/impex/libkra/kis_kra_load_visitor.cpp
@@ -29,6 +29,8 @@
 #include <QByteArray>
 #include <QMessageBox>
 
+#include <KoHashGenerator.h>
+#include <KoHashGeneratorProvider.h>
 #include <KoColorSpaceRegistry.h>
 #include <KoColorProfile.h>
 #include <KoFileDialog.h>
@@ -87,7 +89,6 @@ QString expandEncodedDirectory(const QString& _intern)
     if (!intern.isEmpty() && QChar(intern.at(0)).isDigit())
         result += "part";
     result += intern;
-
 
     return result;
 }
@@ -553,18 +554,31 @@ bool KisKraLoadVisitor::loadPaintDeviceFrame(KisPaintDeviceSP device, const QStr
 
 bool KisKraLoadVisitor::loadProfile(KisPaintDeviceSP device, const QString& location)
 {
-
     if (m_store->hasFile(location)) {
         m_store->open(location);
-        QByteArray data; data.resize(m_store->size());
+        QByteArray data;
+        data.resize(m_store->size());
         dbgFile << "Data to load: " << m_store->size() << " from " << location << " with color space " << device->colorSpace()->id();
         int read = m_store->read(data.data(), m_store->size());
         dbgFile << "Profile size: " << data.size() << " " << m_store->atEnd() << " " << m_store->device()->bytesAvailable() << " " << read;
         m_store->close();
-        // Create a colorspace with the embedded profile
-        const KoColorProfile *profile = KoColorSpaceRegistry::instance()->createColorProfile(device->colorSpace()->colorModelId().id(), device->colorSpace()->colorDepthId().id(), data);
-        if (device->setProfile(profile)) {
-            return true;
+
+        KoHashGenerator *hashGenerator = KoHashGeneratorProvider::instance()->getGenerator("MD5");
+        QByteArray hash = hashGenerator->generateHash(data);
+
+        if (m_profileCache.contains(hash)) {
+            if (device->setProfile(m_profileCache[hash])) {
+                return true;
+            }
+        }
+        else {
+            // Create a colorspace with the embedded profile
+            const KoColorProfile *profile = KoColorSpaceRegistry::instance()->createColorProfile(device->colorSpace()->colorModelId().id(), device->colorSpace()->colorDepthId().id(), data);
+            m_profileCache[hash] = profile;
+            if (device->setProfile(profile)) {
+                return true;
+            }
+
         }
     }
     m_warningMessages << i18n("Could not load profile: %1.", location);
